# relay-workbench

./: .gitignore  Cargo.toml  README.en.md  README.ja.md  README.md  WORKLOG.md  rust-toolchain.toml
adapters/cli-adapters/: Cargo.toml
adapters/cli-adapters/src/: lib.rs
adapters/manifests/: claude.json  codex.json  mix.json
adapters/manifests/examples/: echo.json  gemini-acp.json  grok.json  ollama.json
adapters/mix-runtime/: relay-mix.mjs  relay-mix.test.mjs
adapters/mock-adapter/: Cargo.toml
adapters/mock-adapter/src/: main.rs
apps/RelayGUI/: Info.plist  Package.resolved  Package.swift
apps/RelayGUI/Sources/RelayGUI/: AdapterCatalog.swift  ContentView.swift  RelayApprovalRules.swift  RelayApprovals.swift  RelayArbitrationVerdict.swift  RelayChainFork.swift  RelayClaudeModels.swift  RelayDecisionArchive.swift  RelayDecks.swift  RelayDialogue.swift  RelayDiffPatch.swift  RelayGUIApp.swift  RelayLocalization.swift  RelayMarkdown.swift  RelayNotifier.swift  RelayOrchestration.swift  RelayPersona.swift  RelayProtocol.swift  RelayQuickBar.swift  RelaySelfCheck.swift  RelayService.swift  RelaySessionCatalog.swift  RelaySessionLibrary.swift  RelayTaskHooks.swift  RelayTerminal.swift  RelayThreadWindow.swift  RelayWindowSystem.swift  RelayWorktree.swift  SettingsView.swift  ThreadCatalog.swift
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: lib.rs
crates/relayd/: Cargo.toml
crates/relayd/src/: lib.rs  main.rs
docs/: index.html
scripts/: package-macos-app.sh  prepare-mix-runtime.sh
三维弹球/: game.js  index.html
(+17 files in other folders)
