[package]
name = "cli-adapters"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1"
relay-protocol = { path = "../../crates/relay-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "codex-adapter"
path = "src/bin/codex-adapter.rs"

[[bin]]
name = "claude-adapter"
path = "src/bin/claude-adapter.rs"

[[bin]]
name = "mix-adapter"
path = "src/bin/mix-adapter.rs"

[[bin]]
name = "generic-adapter"
path = "src/bin/generic-adapter.rs"
